@@ -14,12 +14,13 @@ export(gMCPReport, graph2latex)
 export(matrix2graph, graph2matrix, bdiagNA)
 export(graphAnalysis)
 
-export(createBonferroniHolmGraph)
-export(createGraphFromBretzEtAl)
-export(createGraph2FromBretzEtAl)
-export(createGraphFromHommelEtAl)
-export(createGraphFromHungEtWang)
-export(createGraphForParallelGatekeeping)
-export(createGraphForImprovedParallelGatekeeping)
+export(BonferroniHolmGraph)
+export(graphFromBretzEtAl2009)
+export(graph2FromBretzEtAl2009)
+export(graphFromHommelEtAl2007)
+export(graphFromHungEtWang2010)
+export(graphFromMaurerEtAl1995)
+export(graphForParallelGatekeeping)
+export(graphForImprovedParallelGatekeeping)
 
 export(generateWeights, generateBounds, generateTest)
