@@ -8,6 +8,7 @@ High priority:
 - somehow p-value labels where disabled (but we were not in testing modus).
 - Labels like 1/3+1/2*e also in decimal format: 0.3333+0.5*e
 - Variable node weights
+- Analysis comes back to the foreground (do not create a new JTextArea - replace the text!)
 
 Medium priority:
 ================
